fix spacing in demo

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -24,5 +24,5 @@ textarea {
 }
 
 #demofull {
-    height: 24em;
+    height: 27em;
 }
